--- a/play.html
+++ b/play.html
@@ -5,9 +5,8 @@
     <body>
     <h1>Produced by Sai Pranay</h1>
     <h2>A Woman of no Importance</h2>
-    <h4>MRS. ALLONBY : Every woman’s duty never toleave them alone for a single moment, except during this short breathingspace after dinner; without which I believe we poor women would be
-        absolutely worn to shadows.</h4>
-    <pre>
+    <h4>ACT II:_The Drawing-room at Hunstanton Chase_.</h4>
+    <p style="white-space: pre">
         _Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
                                _Door_ R.C.
 
@@ -90,7 +89,7 @@ Hunstanton was the most delightful of creatures, and as good as gold.
 
 MRS. ALLONBY.  Ah, my husband is a sort of promissory note; I’m tired of
 meeting him.
-    </pre>
+    </p>
     
     </body>
 </html>
