--- a/play.html
+++ b/play.html
@@ -7,89 +7,89 @@
     <h2>A Woman of no Importance</h2>
     <h4>ACT II:_The Drawing-room at Hunstanton Chase_.</h4>
     <p style="white-space: pre">
-        _Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
-                               _Door_ R.C.
+        <p class="speech"> _Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
+                               _Door_ R.C.</p>
+                               <p class="stage-direction">[_Ladies seated on sofas_.] </p>
 
-[_Ladies seated on sofas_.]
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">What a comfort it is to have got rid of the men for a
+little!</p>
 
-MRS. ALLONBY.  What a comfort it is to have got rid of the men for a
-little!
+<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">Yes; men persecute us dreadfully, don’t they?</p>
 
-LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">MRS. ALLONBY.  Persecute us?  I wish they did.</p>
 
-MRS. ALLONBY.  Persecute us?  I wish they did.
-
-LADY HUNSTANTON.  My dear!
+<h6 class="name LADYHUNSTANTON">LADY HUNSTANTON. </h6> <p class="speech">My dear!
 
 MRS. ALLONBY.  The annoying thing is that the wretches can be perfectly
 happy without us.  That is why I think it is every woman’s duty never to
 leave them alone for a single moment, except during this short breathing
 space after dinner; without which I believe we poor women would be
-absolutely worn to shadows.
+absolutely worn to shadows.</p>
 
-[_Enter Servants with coffee_.]
+<p class="stage-direction">[_Enter Servants with coffee_.]</p>
 
-LADY HUNSTANTON.  Worn to shadows, dear?
+<h6 class="name LADYHUNSTANTON"> LADY HUNSTANTON. </h6> <p class="speech"> Worn to shadows, dear? </p>
 
-MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up
-to the mark.  They are always trying to escape from us.
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6>  <p class="speech">Yes, Lady Hunstanton.  It is such a strain keeping men up
+to the mark.  They are always trying to escape from us.</p>
 
-LADY STUTFIELD.  It seems to me that it is we who are always trying to
+<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">It seems to me that it is we who are always trying to
 escape from them.  Men are so very, very heartless.  They know their
-power and use it.
+power and use it.</p>
 
-LADY CAROLINE.  [_Takes coffee from Servant_.]  What stuff and nonsense
+<h6 class="name LADYCAROLINE"> LADY CAROLINE. </h6> <p class="stage-direction">[_Takes coffee from Servant_.] </p> <p class="speech"> What stuff and nonsense
 all this about men is!  The thing to do is to keep men in their proper
-place.
+place.</p>
 
-MRS. ALLONBY.  But what is their proper place, Lady Caroline?
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">But what is their proper place, Lady Caroline? </p>
 
-LADY CAROLINE.  Looking after their wives, Mrs. Allonby.
+<h6 class="name LADYCAROLINE"> LADY CAROLINE. </h6> <p class="speech"> Looking after their wives, Mrs. Allonby. </p>
 
-MRS. ALLONBY.  [_Takes coffee from Servant_.]  Really?  And if they’re
-not married?
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="stage-direction"> [_Takes coffee from Servant_.] </p> <p class="speech">Really?  And if they’re
+not married?</p>
 
-LADY CAROLINE.  If they are not married, they should be looking after a
+<h6 class="name LADYCAROLINE">LADY CAROLINE.</h6> <p class="speech"> If they are not married, they should be looking after a
 wife.  It’s perfectly scandalous the amount of bachelors who are going
 about society.  There should be a law passed to compel them all to marry
-within twelve months.
+within twelve months.</p>
 
-LADY STUTFIELD.  [_Refuses coffee_.]  But if they’re in love with some
-one who, perhaps, is tied to another?
+<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6> <p class="stage-direction">[_Refuses coffee_.] </p> <p class="speech">But if they’re in love with some
+one who, perhaps, is tied to another?</p>
 
-LADY CAROLINE.  In that case, Lady Stutfield, they should be married off
+<h6 class="name LADYCAROLINE"> LADY CAROLINE. </h6> <p class="speech"> In that case, Lady Stutfield, they should be married off
 in a week to some plain respectable girl, in order to teach them not to
-meddle with other people’s property.
+meddle with other people’s property.</p>
 
-MRS. ALLONBY.  I don’t think that we should ever be spoken of as other
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech"> I don’t think that we should ever be spoken of as other
 people’s property.  All men are married women’s property.  That is the
 only true definition of what married women’s property really is.  But we
-don’t belong to any one.
+don’t belong to any one.</p>
 
-LADY STUTFIELD.  Oh, I am so very, very glad to hear you say so.
+<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">Oh, I am so very, very glad to hear you say so.</p>
 
-LADY HUNSTANTON.  But do you really think, dear Caroline, that
+<h6 class="name LADYHUNSTANTON"> LADY HUNSTANTON. </h6> <p class="speech"> But do you really think, dear Caroline, that
 legislation would improve matters in any way?  I am told that, nowadays,
 all the married men live like bachelors, and all the bachelors like
-married men.
+married men.</p>
 
-MRS. ALLONBY.  I certainly never know one from the other.
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6>  <p class="speech">I certainly never know one from the other.</p>
 
-LADY STUTFIELD.  Oh, I think one can always know at once whether a man
+<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6> <p class="speech"> Oh, I think one can always know at once whether a man
 has home claims upon his life or not.  I have noticed a very, very sad
-expression in the eyes of so many married men.
+expression in the eyes of so many married men.</p>
 
-MRS. ALLONBY.  Ah, all that I have noticed is that they are horribly
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech"> Ah, all that I have noticed is that they are horribly
 tedious when they are good husbands, and abominably conceited when they
-are not.
+are not.</p>
 
-LADY HUNSTANTON.  Well, I suppose the type of husband has completely
+<h6 class="name LADYHUNSTANTON"> LADY HUNSTANTON. </h6>  <p class="speech">Well, I suppose the type of husband has completely
 changed since my young days, but I’m bound to state that poor dear
-Hunstanton was the most delightful of creatures, and as good as gold.
+Hunstanton was the most delightful of creatures, and as good as gold.</p>
 
-MRS. ALLONBY.  Ah, my husband is a sort of promissory note; I’m tired of
-meeting him.
+<h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">Ah, my husband is a sort of promissory note; I’m tired of
+meeting him.</p>
     </p>
+    
     
     </body>
 </html>
