speech is added

--- a/play.html
+++ b/play.html
@@ -14,7 +14,7 @@
 <h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">What a comfort it is to have got rid of the men for a
 little!</p>
 
-<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">Yes; men persecute us dreadfully, don’t they?</p>
+<h6 class="name LADYSTUTFIELD">LADY STUTFIELD. </h6>  <p class="speech">Yes; men persecute us dreadfully, don’t they?</p>
 
 <h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">MRS. ALLONBY.  Persecute us?  I wish they did.</p>
 
@@ -33,7 +33,7 @@ absolutely worn to shadows.</p>
 <h6 class="name ALLONBY"> MRS. ALLONBY. </h6>  <p class="speech">Yes, Lady Hunstanton.  It is such a strain keeping men up
 to the mark.  They are always trying to escape from us.</p>
 
-<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">It seems to me that it is we who are always trying to
+<h6 class="name LADYSTUTFIELD">LADY STUTFIELD. </h6>  <p class="speech">It seems to me that it is we who are always trying to
 escape from them.  Men are so very, very heartless.  They know their
 power and use it.</p>
 
@@ -53,7 +53,7 @@ wife.  It’s perfectly scandalous the amount of bachelors who are going
 about society.  There should be a law passed to compel them all to marry
 within twelve months.</p>
 
-<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6> <p class="stage-direction">[_Refuses coffee_.] </p> <p class="speech">But if they’re in love with some
+<h6 class="name LADYSTUTFIELD">LADY STUTFIELD. </h6> <p class="stage-direction">[_Refuses coffee_.] </p> <p class="speech">But if they’re in love with some
 one who, perhaps, is tied to another?</p>
 
 <h6 class="name LADYCAROLINE"> LADY CAROLINE. </h6> <p class="speech"> In that case, Lady Stutfield, they should be married off
@@ -65,7 +65,7 @@ people’s property.  All men are married women’s property.  That is the
 only true definition of what married women’s property really is.  But we
 don’t belong to any one.</p>
 
-<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6>  <p class="speech">Oh, I am so very, very glad to hear you say so.</p>
+<h6 class="name LADYSTUTFIELD">LADY STUTFIELD. </h6>  <p class="speech">Oh, I am so very, very glad to hear you say so.</p>
 
 <h6 class="name LADYHUNSTANTON"> LADY HUNSTANTON. </h6> <p class="speech"> But do you really think, dear Caroline, that
 legislation would improve matters in any way?  I am told that, nowadays,
@@ -74,7 +74,7 @@ married men.</p>
 
 <h6 class="name ALLONBY"> MRS. ALLONBY. </h6>  <p class="speech">I certainly never know one from the other.</p>
 
-<h6 class="name LADYSTUTFILED">LADY STUTFIELD. </h6> <p class="speech"> Oh, I think one can always know at once whether a man
+<h6 class="name LADYSTUTFIELD">LADY STUTFIELD. </h6> <p class="speech"> Oh, I think one can always know at once whether a man
 has home claims upon his life or not.  I have noticed a very, very sad
 expression in the eyes of so many married men.</p>
 
@@ -89,7 +89,6 @@ Hunstanton was the most delightful of creatures, and as good as gold.</p>
 <h6 class="name ALLONBY"> MRS. ALLONBY. </h6> <p class="speech">Ah, my husband is a sort of promissory note; I’m tired of
 meeting him.</p>
     </p>
-    
     
     </body>
 </html>
