--- a/play.html
+++ b/play.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="wilde.css">
+    </head>
     <title>Web Apps Lab assignment_04</title>
     <body>
     <h1>Produced by Sai Pranay</h1>
