--- a/play.html
+++ b/play.html
@@ -124,6 +124,7 @@ meeting him.</p>
             </tr>
           
          </table>
+         <a href="play2.html">Link to play Two</a>
          </p>
     </body>
 </html>
