bonus section added

--- a/play2.html
+++ b/play2.html
@@ -29,6 +29,10 @@ She was a Stratton, Caroline, one of Lord Crowland’s daughters.</p>
 fair-haired woman with no chin.</p>
 
 <a href="play.html">Next</a>
-
+<br><br>    
+    <ul class="navbar-horizontal">
+        <li></i><a href="play.html"><i class="fa fa-link"></i>Link to play.html</a></li>
+        <li></i><a href="play2.html"><i class="fa fa-link"></i>Link to play2.html</a></li> 
+    </ul>
 </body>
 </html>
