--- a/play.html
+++ b/play.html
@@ -126,5 +126,13 @@ meeting him.</p>
          </table>
          <a href="play2.html">Link to play Two</a>
          </p>
-    </body>
-</html>
+         <br><br><br>
+         <ul class="navbar-horizontal">
+             <li></i><a href="play.html"><i class="fa fa-link"></i>Link to play.html</a></li>
+             <li></i><a href="play2.html"><i class="fa fa-link"></i>Link to play2.html</a></li> 
+         </ul><br>
+         <br><br><br>
+ 
+         <img src="Images\html_css.png" height="300" width="300">
+  </body>
+ </html>
